<resources>
    <string name="app_name">GladPet</string>
    <string name="title_home">Приюты</string>
    <string name="title_favorite">Любимое</string>
    <string name="title_adopte">Пристроить</string>
    <string name="title_help">Помочь</string>
    <string name="title_chat">Чат</string>
    <string name="favourite">Избранное</string>
    <string name="info">Полезное инфо</string>
    <string name="map">Карта</string>
    <string name="message">Сообщения</string>
    <string name="organisation">Организация</string>
    <string name="pets">Питомцы</string>
    <string name="public_adopte">Публичная страница приюта</string>
    <string name="user">Пользователь</string>
    <string name="menu">Меню</string>
    <string name="animal_shelter">Карта приютов и организаций</string>
    <string name="sos">Я нашел бездомное животное/SOS</string>
    <string name="faq">Центр поддержки пользователей/FAQ</string>
    <string name="search">Поиск</string>
    <string name="url_base">https://gladpet.org</string>
    <string name="error">Произошла ошибка</string>
    <string name="splash_screen">Picture for SplashActivity</string>
    <string name="search_home">В поисках дома</string>
    <string name="pet_name">Без имени</string>
    <string name="shelter">Приют:</string>
    <string name="city_pet">Зверов, Киевская обл.</string>
    <string name="breed_pet">Без породы</string>
    <string name="age_pet">7 мес</string>
    <string name="height_pet">8 см</string>
    <string name="weight_pet">7 кг</string>
    <string name="info_title_pet">Информация о животном</string>
    <string name="info_pet">Кот очень умный, добрый.</string>
    <string name="character_pet">Характер</string>
    <string name="behavior_pet">Особенности поведения</string>
    <string name="character_pet_info">Ласковый, добрый</string>
    <string name="behavior_pet_info">Кот не стерилизован, до сих пор иногда гуляет.</string>
    <string name="wish_pet">Пожелания по пристройству</string>
    <string name="wish_pet_info">В заботливую семью</string>
    <string name="photos_pet">Фото</string>
    <string name="contacts">Контакты</string>
    <string name="phone">+38 063 1871812</string>
    <string name="email_pet">vptarasov1998@gmail.com</string>
    <string name="viber_pet">tarasovvp</string>
    <string name="address_pet">Dnipro</string>
    <string name="featured">Особенный</string>
    <string name="vaccinatedPet">Привит</string>
    <string name="sterialisedTextPet">Стерилизован</string>
    <string name="under_protected">Под опекой</string>
    <string name="no_name">Без имени</string>
    <string name="id_pet">ID питомца:</string>
    <string name="info_about_pet">Информация о питомце</string>
    <string name="color">Окрас</string>
    <string name="age">Возраст</string>
    <string name="location">Локация</string>
    <string name="add_photo">Добавить фото/видео</string>
    <string name="description">Описание</string>
    <string name="state">Состояние</string>
    <string name="save">Сохранить</string>
</resources>
