<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_map"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/animal_shelter"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sos"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/sos"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_faq"
                android:icon="@android:drawable/sym_action_chat"
                android:title="@string/faq"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>